--- a/app/index.css
+++ b/app/index.css
@@ -10,10 +10,28 @@ li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+    color:#d0021b;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.nav {
+    display:flex;
+}
+
+.nav li {
+    margin-right: 15px;
+}
+
+.active {
+    font-weight: bold;
+}
+
 .languages {
     display: flex;
     justify-content: center;
@@ -43,5 +61,33 @@ li {
 .popular-rank {
     font-size: 20px;
     margin:10px;
+}
+
+.home-container {
+    display:flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.button {
+    color:#e6e6e6;
+    background:#0a0a0a;
+    border:none;
+    font-size: 16px;
+    border-radius: 3px;
+    width:200px;
+    text-align: center;
+    display:block;
+    padding:7px 0;
+    margin:10px auto;
+}
+.button:hover:enabled {
+    background: linear-gradient(#1a1a1a,#0a0a0a);
+    color:#FFF;
+    text-decoration: none;
+}
+
+.button:active {
+    transform: translateY(1px);
 }
 
