Created UI for Battle component form

--- a/app/index.css
+++ b/app/index.css
@@ -91,3 +91,28 @@ a {
     transform: translateY(1px);
 }
 
+.row {
+    display:flex;
+    justify-content: space-around;
+}
+.column {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 500px;
+    align-items: center;
+}
+.column input {
+    border-radius: 3px;
+    margin:10px 0;
+    padding: 5px;
+    border: 1px solid rgba(0,0,0, 0.43);
+    font-size: 16px;
+    width: 80%;
+}
+
+.header {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 200;
+}
+
