--- a/app/index.css
+++ b/app/index.css
@@ -116,3 +116,16 @@ a {
     font-weight: 200;
 }
 
+.reset {
+    border:none;
+    background:transparent;
+    color: #d0021b;
+    display:block;
+    width:100%;
+    text-align: center;
+}
+
+.reset:hover {
+    cursor:pointer;
+}
+
